# dr-manhattan

./: pyproject.toml
backtest/crawler/: get_api_key.py
dr_manhattan/exchanges/: __init__.py
dr_manhattan/exchanges/polymarket/: polymarket_builder.py  polymarket_clob.py  polymarket_core.py  polymarket_data.py  polymarket_gamma.py  polymarket_operator.py  polymarket_ws.py
dr_manhattan/models/: order.py  position.py
scripts/polymarket/: check_approval.py
wiki/exchanges/: polymarket.md
